--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
   
 background: 
     linear-gradient(transparent 70%,#000),
-    url('img/in (1).jpg') center/cover no-repeat;
+    url('img.jpg') center/cover no-repeat;
 width: 100%;
 height: 530px;
 align-items: center;
