--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ background:
     linear-gradient(transparent 70%,#000),
     url('img.jpg') center/cover no-repeat;
 width: 100%;
-height: 530px;
+min-height: 100vh;
 align-items: center;
 }
 .nav-var-card{
